<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayLite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeLayoutToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_notification" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_sikh_symbol" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_setting" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayoutUserDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relativeLayoutToolBar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewUser"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/user_profile_shape"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_user" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ayyaz Khan"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:text="khan.shan803@gmail.com"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutUserDetails"
            app:tabBackground="@color/colorWhite"
            app:tabIndicatorColor="@color/colorOrangeLite"
            app:tabSelectedTextColor="@color/colorBlack"
            app:tabTextColor="@color/colorBlack">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite" />

        </com.google.android.material.tabs.TabLayout>

        <LinearLayout
            android:id="@+id/linearLayoutLineChartView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_donate"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/total_donate" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_rupee_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="7500"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <com.db.williamchart.view.LineChartView
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                app:chart_axis="x"
                app:chart_labelsColor="@color/colorBlack"
                app:chart_labelsSize="8sp"
                app:chart_lineColor="@color/colorOrangeLite"
                app:chart_lineThickness="5dp"
                app:chart_smoothLine="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutBarChartView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutLineChartView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oraganiation"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.db.williamchart.view.BarChartView
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="20dp"
                app:chart_axis="x"
                app:chart_barsColor="@color/colorOrangeLite"
                app:chart_barsRadius="10dp"
                app:chart_labelsColor="@color/colorBlack"
                app:chart_labelsSize="10sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
